--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/image/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/image/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon_io/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>دانشگاه آزاد اسلامی</title>
   </head>
